[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protokol-core"
version = "0.1.0"
authors = [
  { name="Souvik" },
]
description = "The Ultra-Lightweight, Enterprise-Grade LLM Orchestration Framework."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/souvik/protokol-core"
