[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protokol-core"
version = "0.1.5"
authors = [
  { name="Souvik" },
]
description = "The Ultra-Lightweight, Enterprise-Grade LLM Orchestration Framework."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["protokol*"]

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
  "pymdown-extensions>=10.8"
]

[project.urls]
"Homepage" = "https://github.com/souvik/protokol-core"

[tool.semantic_release]
version_variable = [
  "pyproject.toml:project.version",
  "src/protokol/__init__.py:__version__"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
changelog_file = "CHANGELOG.md"
commit_author = "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
